--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --border-color: #57AEED;
   --hover-color: #57AEED;
   --font-family: "Outfit", sans-serif;
+  --secondry-text-color: #57AEED;
 }
 
 *{
