--- a/src/GlobalComponents/Hero/Hero.css
+++ b/src/GlobalComponents/Hero/Hero.css
@@ -9,17 +9,27 @@
 
 .hero-video {
     position: absolute;
-    /* top: 50%; */
-    /* left: 50%; */
     top: 50%;
     left: 50%;
-    right: 50%;
     min-width: 100%;
-    min-height: 100vh;
-    width: auto;
-    height: auto;
+    min-height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 1;
     transform: translate(-50%, -50%);
+    /* cursor: auto;
+    border-radius: 0px;
+    display: block;
+    object-fit: cover;
+    object-position: 50% 50%; */
+    cursor:auto;
+    width:100%;
+    height:100%;
+    border-radius:0px;
+    display:block;
+    object-fit:cover;
+    background-color:rgba(0, 0, 0, 0);
+    object-position:50% 50%
 }
 
 .hero-overlay {
@@ -63,6 +73,6 @@
     font-size: 18px;
     line-height: 22px;
     font-weight: 400;
-    color: var(--hover-color);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Shadow for h1 */
+    color: var(--secondry-text-color);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); /* Shadow for h1 */
 }
