--- a/src/Components/Stories/Stories.css
+++ b/src/Components/Stories/Stories.css
@@ -33,27 +33,54 @@
 }
 
 .stories-cards-container{
-    /* display: flex;
+    display: flex;
     width: 100%;
     align-items: center;
     justify-content: center;
-    position: relative; */
-    display: flex;
-    align-items: center;
-    overflow: hidden; 
     position: relative;
+    
 }
+
+/* .stories-cards-wrapper {
+    display: flex;
+    width: 100%;
+    transition: transform 0.3s ease; 
+    gap: 50px;
+    overflow-y: hidden;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+} */
 
 .stories-cards-wrapper {
     display: flex;
-    transition: transform 0.3s ease; 
-    gap: 50px;
+    transition: transform 0.3s ease;
+    gap: 20px; /* Reduced gap for better visual overlap */
+    overflow: hidden; /* Hide overflow to create the half card effect */
 }
 
-.stories-card{
+.stories-card {
     display: flex;
     flex-direction: column;
-    width: 65%;
+    border: 5px solid var(--border-color);
+    border-radius: 30px;
+    background: linear-gradient(138.84deg, rgba(255, 255, 255, 0.044) -6.39%, rgba(143, 143, 143, 0.021) 112.17%);
+    backdrop-filter: blur(10px);
+    padding: 50px 30px; /* Adjusted padding */
+    height: 480px;
+    cursor: pointer;
+    opacity: 0.5;
+    transition: opacity 0.3s ease; /* Smooth opacity transition */
+}
+
+.stories-card.active {
+    opacity: 1; 
+    /* Optionally, you can change other styles for the active card */
+}
+
+/* .stories-card{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
     align-items: start;
     justify-content: space-between;
     border: 5px solid var(--border-color);
@@ -66,11 +93,12 @@
     cursor: pointer;
     opacity: 0.5;
     z-index: 9;
-}
+    flex-wrap: nowrap;
+} */
 
-.stories-card.active {
+/* .stories-card.active {
     opacity: 1; 
-}
+} */
 
 
 .stories-arrow{
