--- a/src/ControlledComponents/InputField/InputField.css
+++ b/src/ControlledComponents/InputField/InputField.css
@@ -4,22 +4,22 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    color: #fff;
+    background: linear-gradient(270.29deg, rgba(156, 202, 219, 0.24) 0.24%, rgba(2, 37, 50, 0.24) 99.76%);
+    /* color: #fff;
     font-size: 13px;
     line-height: 18px;
-    font-weight: 400;
-    border-radius: 4px;
+    font-weight: 400; */
+    /* border-radius: 4px; */
 }
 
-input::placeholder{
+/* input::placeholder{
     font-size: 13px;
     line-height: 18px;
     font-weight: 400;
     color: #fff;
     outline: none;
     
-}
+} */
 
 input:focus{
     outline: none;
