--- a/src/ControlledComponents/PrimeryButton/PrimeryButton.css
+++ b/src/ControlledComponents/PrimeryButton/PrimeryButton.css
@@ -5,9 +5,9 @@
     border: 1px solid var(--border-color);
     border-radius: 31px;
     cursor: pointer;
-    color: #fff;
-    font-size: 13px;
-    line-height: 18px;
-    font-weight: 400;
+    /* color: #fff;
+    font-size: 17px;
+    line-height: 25px;
+    font-weight: 600; */
     background: linear-gradient(270.29deg, rgba(156, 202, 219, 0.24) 0.24%, rgba(2, 37, 50, 0.24) 99.76%);
 }
