--- a/src/GlobalComponents/Hero/Hero.css
+++ b/src/GlobalComponents/Hero/Hero.css
@@ -4,7 +4,6 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    /* background-color: orange; */
 }
 
 .hero-video {
@@ -17,11 +16,6 @@
     height: 100vh;
     z-index: 1;
     transform: translate(-50%, -50%);
-    /* cursor: auto;
-    border-radius: 0px;
-    display: block;
-    object-fit: cover;
-    object-position: 50% 50%; */
     cursor:auto;
     width:100%;
     height:100%;
@@ -38,15 +32,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3); /* Black overlay with 50% opacity */
+    background-color: rgba(0, 0, 0, 0.3); 
     color: white;
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 100px;
-    /* justify-content: center; */
-    z-index: 2; /* Ensures text is above the video */
     text-align: center;
+    /* padding: 0px 100px; */
+    z-index: 9999;
 }
 
 .hero-overlay-text{
@@ -66,7 +60,7 @@
     font-weight: 700;
     color: #fff;
     text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Shadow for h1 */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .hero-overlay p {
@@ -74,5 +68,13 @@
     line-height: 22px;
     font-weight: 400;
     color: var(--secondry-text-color);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); /* Shadow for h1 */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); 
+}
+
+.hero-desc{
+    font-size: 18px !important;
+    line-height: 22px !important;
+    font-weight: 400 !important;
+    color: #fff !important;
+    text-align: center;
 }
