--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@
   --hover-color: #57AEED;
   --font-family: "Outfit", sans-serif;
   --secondry-text-color: #57AEED;
+  --section-bg: #05151d;
+  --section-bg-two: #0C273380;
 }
+
 
 *{
   margin: 0;
